intel/bench_214_new/extr_.opensslcryptoeccurve25519.c_fe_sq_with_main/log.txt
bench_214_new/extr_.opensslcryptoeccurve25519.c_fe_sq_with_main/extr_.opensslcryptoeccurve25519.c_fe_sq_with_main.c:154:12: error: default initialization of an object of const type 'const fe' (aka 'int *const')
  const fe f;
           ^
             = nullptr
1 error generated.
HLS FPGA Parse FAILED.
